--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,13 +9,14 @@ body {
 }
 
 .header {
+    flex-direction: row;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-h1 {
+h1, .brand {
     display: inline-block;
     font-size: 48px;
     
@@ -28,11 +29,16 @@ h1 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
+h3 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
 
 
 .nav_links{
     list-style-type: none;
-    display: inline-block;
+    display: flex;
+    align-items: right;
     margin-left: 25px;
 }
 
@@ -44,6 +50,9 @@ a {
 
 p {
     font-size: 16px;
+    margin: 10px 10px;
+    padding: 20
+    px;
 }
 
 .hero {
@@ -57,53 +66,20 @@ p {
 
 .float-left {
     float: left;
-    margin-right: 25px;
+    margin-right: auto;
 }
 
 .float-right {
     float: right;
-    margin-left: 25px;
+    margin-left: auto;
 }
 
 .content {
+    justify-items: auto;
     width: 75%;
-    display: inline-block;
+    display: block;
     margin-left: 20px;
 }
-
-.benefits {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
-}
-
-.benefit-lead, 
-.benefit-cost, 
-.benefit-brand  {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3,
-.benefit-brand h3, 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img ,
-.benefit-brand img,
-.benefit-cost img {
-    display: inline-block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
 .search-engine-optimization, 
 .online-reputation-management,
 .social-media-marketing  {
@@ -119,23 +95,48 @@ p {
 .online-reputation-management img,
 .social-media-marketing img {
     max-height: 100%;
+    margin: 20px;
+    display: flex;
+    position: 
 }
 
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+.benefits {
+    position: relative;
+    margin-bottom: auto;
+    margin: auto;
+    display: inline-table;
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #2589bd;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+.benefit-lead, 
+.benefit-cost, 
+.benefit-brand  {
+    margin-bottom: 32px;
+    color: #ffffff;
+    text-align: center;
 }
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
+.benefit-lead h3,
+.benefit-brand h3, 
+.benefit-cost h3 {
+    margin-bottom: 10px;
+    text-align: center;
 }
 
+.benefit-lead img ,
+.benefit-brand img,
+.benefit-cost img {
+    display: block;
+    margin: 10px auto;
+    max-width: 150px;
+}
 .footer {
     padding: 30px;
     clear: both;
