--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 body {
   min-height: 100vh;
   background-color: #d9dcd6;
+  
 }
 
 .header {
@@ -28,19 +29,19 @@ body {
   font-size: 48px;
 }
 
-.header h1 .seo {
+.header h1{
   color: #d9dcd6;
 }
 .header div ul {
   list-style-type: none;
 }
 .header div ul li {
-  display: inline-block;
+  display: inline-block
+  ;
   margin-left: 25px;
 }
 
-h1,
-{
+h1 {
   display: inline-block;
   font-size: 48px;
 }
@@ -51,7 +52,7 @@ h2 {
 }
 h3 {
   margin-bottom: 20px;
-  font-size: 16px;
+  font-size: 22px;
   text-align: center;
 }
 h4 {
@@ -68,6 +69,7 @@ h4 {
 a {
   color: #ffffff;
   text-decoration: none;
+  font-weight: bolder;
 }
 
 p {
